--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 
       <h5>Edit <%= resource_name.to_s.humanize %></h5>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name). html: { method: :put}) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put}) do |f| %>
         <%= devise_error_messages! %>
 
         <div class="input-field">
