--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
 <header>
 		<!-- Dropdown Structure -->
 		<ul id="dropdown1" class="dropdown-content">
-		  <li><a href="#!">My Profile</a></li>
+		  <li><%= link_to "My Profile", edit_user_registration_path %></li>
 		  <li><a href="#!">My Courses</a></li>
 		  <li class="divider"></li>
 		  <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 		</ul>
 
 		<ul id="dropdown2" class="dropdown-content">
-		  <li><a href="#!">My Profile</a></li>
+		  <li>%= link_to "My Profile", edit_user_registration_path %></li>
 		  <li><a href="#!">My Courses</a></li>
 		  <li class="divider"></li>
 		  <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
@@ -26,7 +26,7 @@
 			        <li><%= link_to "Sign Up", new_user_registration_path %></li>
 			        <li><%= link_to "Log in", new_user_session_path %></li>
 			   <% else %>
-		       	 <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.email %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+		       	 <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
 		        <% end %>
 		      </ul>
 		      <ul class="side-nav" id="mobile-demo">
@@ -35,7 +35,7 @@
 	       		        <li><%= link_to "Sign Up", new_user_registration_path %></li>
 			        	 <li><%= link_to "Log in", new_user_session_path %></li>
 			        <% else %>
-			        	<li><a class="dropdown-button" href="#!" data-activates="dropdown2"><%= current_user.email %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+			        	<li><a class="dropdown-button" href="#!" data-activates="dropdown2"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
 			      <% end %>  
       			</ul>
 	    		</div>
