--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,7 +26,10 @@
 			        <li><%= link_to "Sign Up", new_user_registration_path %></li>
 			        <li><%= link_to "Log in", new_user_session_path %></li>
 			   <% else %>
-		       	 <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+		       	 <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
+		       	 	<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+		       	 	<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
+		       	 </li>
 		        <% end %>
 		      </ul>
 		      <ul class="side-nav" id="mobile-demo">
@@ -35,7 +38,10 @@
 	       		        <li><%= link_to "Sign Up", new_user_registration_path %></li>
 			        	 <li><%= link_to "Log in", new_user_session_path %></li>
 			        <% else %>
-			        	<li><a class="dropdown-button" href="#!" data-activates="dropdown2"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+			        	<li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown2">
+			        		<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+			        		<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
+			        	</li>
 			      <% end %>  
       			</ul>
 	    		</div>
