--- a/app/views/project/index.html.erb
+++ b/app/views/project/index.html.erb
@@ -3,15 +3,15 @@
 
 	<% @projects.each do |project| %>
 		<%= link_to project do %>
-			<div class="col s12 m6">
+			<div class="col s12 m6 l4">
 				<div class="card">
 					
 					<div class="card-image waves-effect waves-block waves-ligh">
 						<%=  image_tag project.image %>
 					</div>
 
-					<div class="card-content">
-						<span class= "card-title grey-text text-darken-4">							<%= project.name %>
+					<div class="card-content" style="height: 6em">
+						<span class= "card-title grey-text text-darken-4">							<%= project.shortname %>
 						</span>
 					</div>
 
