--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,36 +15,36 @@
 		</ul>
 
 
-		<nav class="brown lighten-4 z-depth-2">
-		<div class="container">
-		    <div class="nav-wrapper">
-		      <a href="#!" class="brand-logo">Code4Pro</a>
-		      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-		      <ul class="right hide-on-med-and-down">
-		        <li><a href="#">Courses</a></li>
-		        <% if (!user_signed_in?) %>
-			        <li><%= link_to "Sign Up", new_user_registration_path %></li>
-			        <li><%= link_to "Log in", new_user_session_path %></li>
-			   <% else %>
-		       	 <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
-		       	 	<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
-		       	 	<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
-		       	 </li>
-		        <% end %>
-		      </ul>
-		      <ul class="side-nav" id="mobile-demo">
-		     		 <li><a href="#">Courses</a></li>
-		     		 <% if (!user_signed_in?) %>
-	       		        <li><%= link_to "Sign Up", new_user_registration_path %></li>
-			        	 <li><%= link_to "Log in", new_user_session_path %></li>
-			        <% else %>
-			        	<li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown2">
-			        		<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
-			        		<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
-			        	</li>
-			      <% end %>  
-      			</ul>
-	    		</div>
+		<nav class="light-blue darken-1 z-depth-2">
+			<div class="container">
+			    <div class="nav-wrapper">
+			      <a href="#!" class="brand-logo">Code4Pro</a>
+			      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+			      <ul class="right hide-on-med-and-down">
+			        <li><%= link_to "Projects", root_path %></li>
+			        <% if (!user_signed_in?) %>
+				        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+				        <li><%= link_to "Log in", new_user_session_path %></li>
+				   <% else %>
+			       	 <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
+			       	 	<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+			       	 	<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
+			       	 </li>
+			        <% end %>
+			      </ul>
+			      <ul class="side-nav" id="mobile-demo">
+			     		 <li><%= link_to "Projects", root_path %></li>
+			     		 <% if (!user_signed_in?) %>
+		       		        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+				        	 <li><%= link_to "Log in", new_user_session_path %></li>
+				        <% else %>
+				        	<li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown2">
+				        		<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+				        		<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
+				        	</li>
+				      <% end %>  
+	      			</ul>
+		    		</div>
   			</div>
   		</nav>
 	</header>
