--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,15 +1,15 @@
 <header>
 		<!-- Dropdown Structure -->
-		<ul id="dropdown1" class="dropdown-content">
+		<ul id="dropdown1" class="dropdown-content mask">
 		  <li><%= link_to "My Profile", edit_user_registration_path %></li>
-		  <li><a href="#!">My Courses</a></li>
+		  <li><%= link_to "My Projects", myprojects_path %></li>
 		  <li class="divider"></li>
 		  <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 		</ul>
 
-		<ul id="dropdown2" class="dropdown-content">
-		  <li>%= link_to "My Profile", edit_user_registration_path %></li>
-		  <li><a href="#!">My Courses</a></li>
+		<ul id="dropdown2" class="dropdown-content mask">
+		  <li><%= link_to "My Profile", edit_user_registration_path %></li>
+		  <li><%= link_to "My Projects", myprojects_path %></li>
 		  <li class="divider"></li>
 		  <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 		</ul>
@@ -27,7 +27,7 @@
 				        <li><%= link_to "Log in", new_user_session_path %></li>
 				   <% else %>
 			       	 <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
-			       	 	<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+			       	 	<%= image_tag avatar_url(current_user), class: "circle responsive-img avatar-small" %>&nbsp;
 			       	 	<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
 			       	 </li>
 			        <% end %>
@@ -39,7 +39,7 @@
 				        	 <li><%= link_to "Log in", new_user_session_path %></li>
 				        <% else %>
 				        	<li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown2">
-				        		<%= image_tag avatar_url(current_user), class: "circle responsive-img" %>&nbsp;
+				        		<%= image_tag avatar_url(current_user), class: "circle responsive-img avatar-small" %>&nbsp;
 				        		<%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a>
 				        	</li>
 				      <% end %>  
