--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,15 @@
   .container {
   	width: 95%;
   }
+
+  .avatar-small {
+    width: 50px;
+  }
+
+    .avatar-medium {
+    width: 80px;
+  }
+
+  .mask {
+    z-index: 99;
+  }
