--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -41,6 +41,7 @@
 			</div>
 			<div class="card-content grey-text text-darken-4">
 				<h5><%= @project.name %></h5>
+				<span><%= @project.average_rating %> <%= @reviews.count %> <%= @reviews.count >1? "Reviews" : "Review" %></span>
 				<hr>
 				<%= @project.content %>
 
