Added tabs to project show

--- a/app/views/project/list.html.erb
+++ b/app/views/project/list.html.erb
@@ -1,7 +1,7 @@
 <center><h5>My Projects</h5>
 </center>
 
-<div class="row">
+<div class="row" data-no-turbolink>
 <br/>
 	
 	<% if @projects.count > 0 %>
