--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -6,11 +6,44 @@
 					<h1><%= @project.price == 0? "Free"  : "$#{@project.price}" %></h1>
 				</div>
 				<div class="card-action center">
+
 					<% if user_signed_in? %>
-						<%= form_tag free_path do %>
-							<%= hidden_field_tag 'project_id' , @project.id %>
-							<button type="submit" class="btn pink darken-2">Take this Project</button>
-						<% end %>
+						<% if @project.price == 0 %>
+							<%= form_tag free_path do %>
+								<%= hidden_field_tag 'project_id' , @project.id %>
+								<button type="submit" class="btn pink darken-2">Take this Project</button>
+							<% end %>							
+						<% else %>
+							<%= form_tag pay_path, id: 'chargeForm' do %>
+								<script src="https://checkout.stripe.com/checkout.js"></script>
+								<%= hidden_field_tag 'stripeToken' %>
+								<%= hidden_field_tag 'stripeEmail' %>
+								<%= hidden_field_tag 'project_id', @project.id %>
+
+								<button id="btn-buy" type="button" class="btn pink darken-2">Take this Project</button><br/>
+
+								<script>
+								  var handler = StripeCheckout.configure({
+								    key: '<%= Rails.configuration.stripe[:publishable_key] %>',								   
+								    token: function(token, arg) {
+								    	$('#stripeToken').val(token.id);
+								      $('#stripeEmail').val(token.email);
+								      $('#chargeForm').submit();
+								    }
+								  });
+
+								  $('#btn-buy').on('click', function(e) {
+							  	     handler.open({
+								      name: 'Code4Pro',
+								      description: '<%= @project.name %>',
+								      amount: '<%= @project.price_in_cents %>',
+								      email: '<%= current_user.email %>'
+								    });
+								    e.preventDefault();
+								  });							  
+								</script>
+							<% end %>
+						<% end %>		
 					<% else %>
 						<%= link_to new_user_session_path do %>
 							<button type="submit" class="btn pink darken-2">Take this Project</button>
