--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -24,7 +24,7 @@
 
 								<script>
 								  var handler = StripeCheckout.configure({
-								    key: '<%= Rails.configuration.stripe[:publishable_key] %>',								   
+								    key: '<%= ENV['STRIPE_PUBLIC_KEY'] %>',								   
 								    token: function(token, arg) {
 								    	$('#stripeToken').val(token.id);
 								      $('#stripeEmail').val(token.email);
