--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
 	  </div>
 
 	 <script src="//load.sumome.com/" data-sumo-site-id="7b4881fa90b933cd443c0636765e313a635d6dc7085b1c0afd5a643c47fcae44" async="async"></script>
+
+
+	 <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-64045104-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 
