--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -134,8 +134,21 @@
 					</div>
 				</div>
 
-			    	<div id="discussion" class="col s12">
-			    		<!-- Discussion would be here -->
+			    	<div id="discussion" class="col s10 offset-s1">
+			    		<div id="disqus_thread"></div>
+						<script type="text/javascript">
+						    /* * * CONFIGURATION VARIABLES * * */
+						    var disqus_shortname = 'permantlyblitzed';
+						    var disqus_identifer ='<%= @project.id %>';
+						    
+						    /* * * DON'T EDIT BELOW THIS LINE * * */
+						    (function() {
+						        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+						        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+						        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+						    })();
+						</script>
+						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 			    	</div>			
 			 </div>
 		 </div>
